--- a/android_o-starter/app/src/main/res/drawable-anydpi/ic_cross.xml
+++ b/android_o-starter/app/src/main/res/drawable-anydpi/ic_cross.xml
@@ -3,14 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
-    android:alpha="0.6">
+    android:tint="#E51300"
+    android:alpha="0.8">
   <group android:scaleX="1.1111112"
       android:scaleY="1.1111112"
       android:translateX="-1.3333334"
       android:translateY="-1.3333334">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19,5v14H5V5h14m0,-2H5c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V5c0,-1.1 -0.9,-2 -2,-2z"/>
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
   </group>
 </vector>
