--- a/android_o-starter/app/src/main/res/menu/competition_menu.xml
+++ b/android_o-starter/app/src/main/res/menu/competition_menu.xml
@@ -16,4 +16,8 @@
         android:title="@string/share_race"
         android:id="@+id/share_race_item"/>
 
+    <item
+        android:title="@string/delete_race"
+        android:id="@+id/delete_race_item"/>
+
 </menu>
