--- a/android_o-starter/app/src/main/res/layout/activity_startlist_view.xml
+++ b/android_o-starter/app/src/main/res/layout/activity_startlist_view.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activities.StartlistViewActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/minute_rec_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
