--- a/android_o-starter/app/src/main/res/layout/minute_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/minute_list_item.xml
@@ -50,6 +50,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/runnersRecView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
