--- a/android_o-starter/app/src/main/res/layout/minute_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/minute_list_item.xml
@@ -9,12 +9,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+
         tools:layout_editor_absoluteX="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/collapse_constraint_layout"
-        android:background="@color/orange">
+        android:background="@color/purple_200">
 
         <TextView
             android:id="@+id/time_text_view"
