--- a/android_o-starter/app/src/main/res/values/colors.xml
+++ b/android_o-starter/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FFC107</color>
+    <color name="light_gray">#B1B1B1</color>
 </resources>
