--- a/android_o-starter/app/src/main/res/layout/activity_main.xml
+++ b/android_o-starter/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,12 +8,24 @@
     android:padding="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/competitionsRecView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/competitionsRecView"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/addCompetitionTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:visibility="gone"
+        android:text="Add new Competition"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
