--- a/android_o-starter/app/src/main/res/layout/minute_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/minute_list_item.xml
@@ -20,23 +20,14 @@
             android:id="@+id/time_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
             android:fontFamily="sans-serif-black"
+            android:layout_marginStart="10dp"
             android:text="@string/time"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/arrow_up_image_view"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="30dp" />
-
-        <ImageView
-            android:id="@+id/arrow_up_image_view"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_arrow_down"
-            app:layout_constraintBottom_toBottomOf="@+id/time_text_view"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/time_text_view" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
