--- a/android_o-starter/app/src/main/res/layout/runner_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/runner_list_item.xml
@@ -11,24 +11,27 @@
         android:id="@+id/SItextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/default_SI"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintEnd_toEndOf="@+id/runnerNametextView"
+        app:layout_constraintStart_toStartOf="@+id/runnerNametextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/runnerNametextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/default_name"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@+id/registrationIDtextView"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toEndOf="@+id/StartedcheckBox"
         app:layout_constraintTop_toBottomOf="@+id/SItextView" />
 
     <TextView
@@ -36,56 +39,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/default_statNumber"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="@+id/SItextView" />
+        app:layout_constraintBottom_toTopOf="@+id/registrationIDtextView"
+        app:layout_constraintStart_toStartOf="@+id/registrationIDtextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <TextView
         android:id="@+id/registrationIDtextView"
         android:layout_width="63dp"
         android:layout_height="17dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/dok9800"
-        app:layout_constraintBottom_toBottomOf="@+id/runnerNametextView"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editImageView"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/runnerNametextView"
         app:layout_constraintTop_toBottomOf="@+id/startNumbertextView" />
 
     <ImageView
         android:id="@+id/editImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="10dp"
         android:src="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="@+id/registrationIDtextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/startNumbertextView"
-        android:layout_marginEnd="15dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/StartedcheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:checked="false"
         android:scaleX="2"
         android:scaleY="2"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="@+id/runnerNametextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/SItextView"
-        android:layout_marginStart="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="322dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="105dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
