--- a/android_o-starter/app/src/main/res/layout/activity_main.xml
+++ b/android_o-starter/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          android:visibility="gone"
-        android:text="Add new Competition"
+        android:text="@string/add_new_competition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
