--- a/android_o-starter/app/src/main/res/layout/change_runner_dialog.xml
+++ b/android_o-starter/app/src/main/res/layout/change_runner_dialog.xml
@@ -56,8 +56,8 @@
         android:id="@+id/givenTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:text="Given Name:"
+        android:layout_marginEnd="20dp"
+        android:text="@string/given_name"
         app:layout_constraintBottom_toBottomOf="@+id/givenNameEditText"
         app:layout_constraintEnd_toStartOf="@+id/givenNameEditText"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:id="@+id/familyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Family Name:"
+        android:text="@string/family_name"
         app:layout_constraintBottom_toBottomOf="@+id/familyNameEditText"
         app:layout_constraintStart_toStartOf="@+id/givenTextView"
         app:layout_constraintTop_toTopOf="@+id/familyNameEditText" />
@@ -76,7 +76,7 @@
         android:id="@+id/SITextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SI Number:"
+        android:text="@string/si_number"
         app:layout_constraintBottom_toBottomOf="@+id/SIEditTextNumber"
         app:layout_constraintStart_toStartOf="@+id/familyTextView"
         app:layout_constraintTop_toTopOf="@+id/SIEditTextNumber" />
@@ -85,7 +85,7 @@
         android:id="@+id/startNumTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Number:"
+        android:text="@string/start_number"
         app:layout_constraintBottom_toBottomOf="@+id/startNumberEditTextNumber"
         app:layout_constraintStart_toStartOf="@+id/SITextView"
         app:layout_constraintTop_toTopOf="@+id/startNumberEditTextNumber" />
@@ -94,7 +94,7 @@
         android:id="@+id/regTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registration Id:"
+        android:text="@string/registration_id"
         app:layout_constraintBottom_toBottomOf="@+id/regEditText"
         app:layout_constraintStart_toStartOf="@+id/startNumTextView"
         app:layout_constraintTop_toTopOf="@+id/regEditText" />
