--- a/android_o-starter/app/src/main/res/layout/competitions_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/competitions_list_item.xml
@@ -21,7 +21,7 @@
         android:fontFamily="sans-serif-black"
         android:maxLines="1"
         android:text="@string/competition_name"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/menuImageView"
         app:layout_constraintStart_toEndOf="@+id/startImageView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="sans-serif-black"
-        android:textSize="10dp"
+        android:textSize="10sp"
         android:text="@string/default_date"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/competitioTextView"
