--- a/android_o-starter/app/src/main/res/values/themes.xml
+++ b/android_o-starter/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.OStarter" parent="Theme.MaterialComponents.Light">
+    <style name="Theme.OStarter" parent="Theme.MaterialComponents.Light"></style>
+
+    <style name="Theme.OStarter.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="Theme.OStarter.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.OStarter.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
