--- a/android_o-starter/app/src/main/res/layout/minute_list_item.xml
+++ b/android_o-starter/app/src/main/res/layout/minute_list_item.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/collapse_constraint_layout"
-        android:background="@color/purple_200">
+        android:background="@color/purple_700">
 
         <TextView
             android:id="@+id/time_text_view"
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
             android:layout_marginStart="10dp"
+            android:textColor="@color/white"
             android:text="@string/time"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
