--- a/android_o-starter/app/src/main/res/layout/new_competition_dialog.xml
+++ b/android_o-starter/app/src/main/res/layout/new_competition_dialog.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="15dp">
 
     <EditText
@@ -46,8 +46,10 @@
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/ic_ok"
-        android:visibility="gone"
+        android:visibility="invisible"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/loadButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/loadButton"
         app:layout_constraintTop_toTopOf="@+id/loadButton" />
 
@@ -57,8 +59,10 @@
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:src="@drawable/ic_cross"
-        android:visibility="gone"
+        android:visibility="invisible"
+        android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/loadButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/loadButton"
         app:layout_constraintTop_toTopOf="@+id/loadButton" />
 
